[metadata]
name = Tiberius
version = attr: 0.1.0
author = James Kirk
author_email = j.kirk22@imperial.ac.uk
description = A package to extract time series spectra and fit exoplanet transit light curves
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    argparse
    astropy
    astroscrappy
    batman-package
    corner
    emcee
    exotic-ld
    george
    h5netcdf
    ipykernel
    ldtk
    jupyter
    matplotlib
    numpy
    pandas
    peakutils
    photutils
    pysynphot
    scipy
    xarray

[options.packages.find]
where = src
