[metadata]
name = Tiberius
description = A package to extract time series spectra and fit exoplanet transit light curves
author = James Kirk
author_email = j.kirk22@imperial.ac.uk
license = MIT License
keywords =
    JWST
    EFOSC
    ACAM
    timeseries
    astronomy
    exoplanets
    transit
    light curve
    spectroscopy
    data reduction
    data analysis
    pipeline
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir = 
    = src
python_requires = >=3.11
install_requires =
    astropy
    astroscrappy
    batman-package
    corner
    emcee
    exotic-ld
    george
    h5netcdf
    ipykernel
    ldtk
    jupyter
    matplotlib
    numpy
    pandas
    peakutils
    photutils
    pysynphot
    scipy
    xarray

[options.packages.find]
where = src

[options.package_data]
tiberius = 
    *.txt
    *.ipynb
    *.md
    *.pdf
    *.ps
    *.png

[options.extras_require]
test =
    pytest<8.0
    flake8
docs =
    sphinx>=6.0
    nbsphinx>=0.8.9
    myst-parser>=0.18.0
